# insulin-checker

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_26_1532-ff90497128f8_create_table_user_tokens.py
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_02_24_1243-399822c109bd_create_table_users.py  2025_03_11_1525-fd7ac7fa2bd4_create_table_foods.py
src/api/: __init__.py
src/api/v1/: __init__.py  insulin.py  users.py
src/core/: __init__.py  config.py  taskiq_broker.py
src/core/auth/: __init__.py
src/core/auth/login/: __init__.py  utils.py
src/core/auth/register/: __init__.py  utils.py
src/core/models/: __init__.py  base.py  db_helper.py  foods.py  users.py
src/core/schemas/: __init__.py  jwt.py  products.py  users.py
src/core/services/: __init__.py  products.py  users.py
src/crud/: __init__.py  products.py  users.py  verif_token.py
src/mailing/: __init__.py  send_email.py
src/repositories/: __init__.py  users.py  verif_token.py
src/tasks/: __init__.py  send_mail_verif_notification.py
src/tests/: test_api_crud.py  test_crud.py  test_jwt.py
src/utils/: __init__.py  users.py
